# scraper-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MONOREPO_DESIGN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-base.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml
configs/: data_retention.yaml  proxies.yaml  schedules.yaml
docs/: anti_detect_guide.md  coding_standards.md  onboarding.md
projects/_template/: README.md  config.yaml.example  requirements.txt  scraper.py
projects/_template/tests/: test_parser.py  test_smoke.py
projects/yunqing/github-trending/: README.md  config.yaml  scraper.py
projects/yunqing/github-trending/tests/: test_parser.py
scripts/: add_member.sh  check_health.py  generate_registry.py  new_project.sh  offboard_member.sh
