[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-hub"
version = "0.1.0"
description = "爬虫团队 Monorepo"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "fake-useragent>=1.4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Repository = "https://github.com/modelbest-crawl/scraper-hub"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]

[tool.pytest.ini_options]
testpaths = ["projects", "packages"]
markers = [
    "smoke: 冒烟测试，真实发请求（手动跑或上线前跑）",
]
addopts = "-m 'not smoke'"
